Get NLU and buttons working

--- a/flow/catchall.yaml
+++ b/flow/catchall.yaml
@@ -1,5 +1,5 @@
-triggers:
-  - catchall
+#triggers:
+#  - catchall
 
 steps:
   - say: Sorry, I don't understand. Would you like to leave a message?
