--- a/flow/nlu/routing.yaml
+++ b/flow/nlu/routing.yaml
@@ -1,6 +1,6 @@
-triggers:
-  - expect: dialogflow
-    integration: integration.google.dialogflow
+#triggers:
+#  - expect: dialogflow
+#    integration: integration.google.dialogflow
 
 steps:
   - match:
