Add new Front feature flows

--- a/flow/start.yaml
+++ b/flow/start.yaml
@@ -23,3 +23,6 @@ steps:
       - text: Returns
         action:
           flow: flow.faq.returns
+      - text: Talk to support
+        action:
+          flow: flow.front.human
