--- a/flow/front/human.yaml
+++ b/flow/front/human.yaml
@@ -1,5 +1,5 @@
 triggers:
-  - regex: \bfront.human\b
+  - regex: escalate
 
 steps:
   - if: (@ user.name )
@@ -10,12 +10,28 @@ steps:
   - user_set: name
   - say: Nice to meet, you (@ user.name )! 👋
 
+  - (escalate)
+  - if: (@ vault.front.mode == "ticketing" )
+    then:
+      flow: flow.front.ticketing.create
+      transfer: true
+    else: next
+
+  - flow: flow.front.teams.shift.team_shift
+  - if: (@ flow.support_available )
+    then: next
+    else:
+      jump: support_offline
+
   - note: This note appears before agent escalation
 
-  - (escalate)
   - say: One moment while I find someone to help...
   - type: meya.front.component.conversation.update
     integration: integration.front
     assignee_email: (@ vault.front.agent_email )
 
   - note: This note appears after agent escalation
+  - end
+
+  - (support_offline)
+  - say: None of our agents are available at the moment. Please try again later.
