--- a/integration/front.yaml
+++ b/integration/front.yaml
@@ -3,5 +3,12 @@ enabled: (@ vault.front.enabled )
 api_token: (@ vault.front.api_token )
 bot_teammate_email: (@ vault.front.bot_teammate_email )
 channel_id: (@ vault.front.channel_id )
-unassign_mode: agent
+unassign_mode: bot
+integration_mode: ticketing
+unlink_thread_status:
+  - trash
+agent:
+  name: first_initial_last_initial
+  avatar:
+    monogram: first_initial_last_initial
 client_token: (@ vault.front.client_token )
