--- a/flow/front/shifts/list.yaml
+++ b/flow/front/shifts/list.yaml
@@ -2,6 +2,9 @@ triggers:
   - keyword: front_list_shifts
 
 steps:
+  # This lists all shifts for all teams. You might want to use this to determine if any support agents are available.
+  # You can also use the shifts.get component to retrieve a specific shift, or the teams.shifts.list component to
+  # list shifts for a specific team.
   - type: meya.front.component.shifts.list
     integration: integration.front
 
