--- a/bot/default.yaml
+++ b/bot/default.yaml
@@ -1,5 +1,5 @@
 type: meya.bot.element
-name: Front Demo
+name: Loyalty Rewards Bot
 avatar:
   image: https://images.prismic.io/meya-website/c63a142a-a049-4da2-8c83-842325e31449_scifi-robot.png
 markdown: true
