--- a/flow/nlu/smalltalk.yaml
+++ b/flow/nlu/smalltalk.yaml
@@ -2,3 +2,5 @@ steps:
   - say: (@ flow.dialogflow_response.queryResult.fulfillmentText )
   - flow: flow.restart
     transfer: true
+    data:
+      text: What can I help you with?
