--- a/flow/faq/returns.yaml
+++ b/flow/faq/returns.yaml
@@ -1,9 +1,11 @@
+triggers:
+  - keyword: returns
+
 steps:
   - say: Before returning an item, be sure to contact our support team in case they
       can help fix the issue.
+  - delay: 1
   - say: A prepaid shipping form is included with your purchase so you can make returns
       easily.
-    quick_replies:
-      - text: Back
-        action:
-          flow: flow.start
+  - flow: flow.restart
+    transfer: true
