--- a/flow/order.yaml
+++ b/flow/order.yaml
@@ -1,7 +1,8 @@
+triggers:
+  - keyword: order
+
 steps:
   - ask: Enter an order number.
   - say: Order number (@ flow.result ) is on its way.
-    quick_replies:
-      - text: Back
-        action:
-          flow: flow.start
+  - flow: flow.restart
+    transfer: true
