--- a/flow/front/ticketing/unlink.yaml
+++ b/flow/front/ticketing/unlink.yaml
@@ -2,6 +2,7 @@ triggers:
   - agent_command: unlink
 
 steps:
+  # TODO Switch to bot assign event
   - type: thread_unlink
     integration: integration.front
   - thread_set:
