--- a/integration/front.yaml
+++ b/integration/front.yaml
@@ -4,9 +4,7 @@ api_token: (@ vault.front.api_token )
 bot_teammate_email: (@ vault.front.bot_teammate_email )
 channel_id: (@ vault.front.channel_id )
 unassign_mode: bot
-integration_mode: ticketing
-unlink_thread_status:
-  - trash
+integration_mode: (@ vault.front.mode )
 agent:
   name: first_initial_last_initial
   avatar:
