--- a/integration/front.yaml
+++ b/integration/front.yaml
@@ -8,5 +8,5 @@ integration_mode: (@ vault.front.mode )
 agent:
   name: first_initial_last_initial
   avatar:
-    monogram: first_initial_last_initial
+    image: https://meya-website.cdn.prismic.io/meya-website/add2c3f0-c3f8-4bd9-b04e-9ece561aa6d2_headphones-customer-support-question.svg
 client_token: (@ vault.front.client_token )
