--- a/integration/front.yaml
+++ b/integration/front.yaml
@@ -10,3 +10,12 @@ agent:
   avatar:
     image: https://meya-website.cdn.prismic.io/meya-website/add2c3f0-c3f8-4bd9-b04e-9ece561aa6d2_headphones-customer-support-question.svg
 client_token: (@ vault.front.client_token )
+filter:
+  tx: >-
+    (
+      meya.event.entry.interactive
+      OR meya.csp.event
+      OR meya.button.event.click
+      OR meya.form.event.submit
+    )
+    AND NOT meya.text.event.status
