--- a/flow/front/contact/create_or_update.yaml
+++ b/flow/front/contact/create_or_update.yaml
@@ -3,11 +3,12 @@ triggers:
 
 steps:
   - type: meya.user.component.try_reverse_lookup
-    integration: integration.front
+    integration: integration.orb
   - if: (@ flow.result )
     then: end
     else: next
 
-  - type: meya.front.component.contact.create
+  - type: meya.front.component.contact.create_or_update
     integration: integration.front
     name: (@ user.name )
+    handle: app/(@ flow.result )
