--- a/flow/front/human.yaml
+++ b/flow/front/human.yaml
@@ -2,20 +2,24 @@ triggers:
   - keyword: human
 
 steps:
-  - flow: flow.front.contact.create
+  - thread_set:
+      mode: prechat
 
-  - say: What type of question do you have?
-  - select: Question type
-    options:
+  - flow: flow.front.contact.create_or_update
+
+  - ask: What type of question do you have?
+    quick_replies:
       - Points
       - Rewards
       - Shipping
       - Other
-    triggers:
-      - catchall
   - note: Question type (@ flow.result )
 
-  - ask: What is your question?
+  - if: (@ flow.result == "Points" )
+    then:
+      flow: flow.front.points_question
+    else:
+      ask: What is your question?
 
   - if: (@ vault.front.mode == "ticketing" )
     then:
