--- a/flow/front/tracking/escalate.yaml
+++ b/flow/front/tracking/escalate.yaml
@@ -1,7 +1,7 @@
 steps:
   - say: One moment while I find someone to help...
 
+  - note: New subject - (@ flow.subject )
   - type: meya.front.component.conversation.update
     integration: integration.front
     assignee_email:
-    # TODO subject: (@ flow.subject )
