--- a/flow/front/points_question.yaml
+++ b/flow/front/points_question.yaml
@@ -13,12 +13,15 @@ steps:
   - (missing)
   - ask: Please upload a photo of your receipt
     expect: image
-  - end
+  - end:
+      result: Missing points from purchase
 
   - (disappeared)
   - ask: OK let's figure it out, tell me what happened
-  - end
+  - end:
+      result: Points disappeared
 
   - (other)
   - ask_form: What other question do you have?
-  - end
+  - end:
+      result: (@ flow.result )
