--- a/vault.yaml
+++ b/vault.yaml
@@ -4,3 +4,5 @@ front.channel_id: xxx
 front.bot_teammate_email: xxx
 front.client_token: xxx
 front.mode: xxx
+front.tracking_escalate_inbox_id:
+front.tracking_complete_inbox_id:
