Fix tracking assignment check

--- a/flow/front/status/assign.yaml
+++ b/flow/front/status/assign.yaml
@@ -20,7 +20,7 @@ steps:
   - thread_set:
       bot_assigned_count: (@ (thread.bot_assigned_count or 0) + 1 )
   - if: >-
-      (@ vault.front.mode == "ticketing" or thread.bot_assigned_count == 1 )
+      (@ vault.front.mode == "tracking" and thread.bot_assigned_count == 1 )
     then: end
     else: next
   - if: (@ vault.front.mode == "ticketing" )
