--- a/integration/front.yaml
+++ b/integration/front.yaml
@@ -5,7 +5,7 @@ channel_id: (@ vault.front.channel_id )
 unassign_mode: bot
 integration_mode: (@ vault.front.mode )
 agent:
-  name: first_initial_last_initial
+  name: first_last_initial
   avatar:
     image: https://meya-website.cdn.prismic.io/meya-website/add2c3f0-c3f8-4bd9-b04e-9ece561aa6d2_headphones-customer-support-question.svg
 client_token: (@ vault.front.client_token )
