Change default front.mode

--- a/vault.yaml
+++ b/vault.yaml
@@ -3,6 +3,6 @@ front.api_token: xxx
 front.channel_id: xxx
 front.bot_teammate_email: xxx
 front.client_token: xxx
-front.mode: xxx
+front.mode: ticketing
 front.tracking_escalate_inbox_id:
 front.tracking_complete_inbox_id:
