--- a/flow/onboarding/house.yaml
+++ b/flow/onboarding/house.yaml
@@ -5,6 +5,7 @@ steps:
         - icon: (@ config.icon.left )
           action:
             flow: flow.onboarding.personal
+            transfer: true
       milestones:
         - text: Intro
           current: true
@@ -18,30 +19,45 @@ steps:
           Next, what can you tell us about your home?
       - label: Home type
         choices:
-          - Highrise condo
-          - Townhouse
-          - Duplex
-          - Single detached
+          - text: Highrise condo
+            default: (@ user.home_type == "Highrise condo" )
+          - text: Townhouse
+            default: (@ user.home_type == "Townhouse" )
+          - text: Duplex
+            default: (@ user.home_type == "Duplex" )
+          - text: Single detached
+            default: (@ user.home_type == "Single detached" )
       - label: Appraised value
         type: text_input
         required: false
-        default: (@ user.appraised_value )
+        default: (@ user.home_value )
       - label: Approximate year built
         type: text_input
         required: true
-        default: (@ user.appraised_value )
+        default: (@ user.home_year )
       - label: Luxury features
         buttons:
-          - Garage
-          - Shed
-          - Sun room
-          - Theatre room
-          - Bowling alley
-          - Pergola
-          - Walk-in pantry
+          - text: Garage
+            default: (@ "Garage" in (user.home_features or []) )
+          - text: Shed
+            default: (@ "Shed" in (user.home_features or []) )
+          - text: Sun room
+            default: (@ "Sun room" in (user.home_features or []) )
+          - text: Theatre room
+            default: (@ "Theatre room" in (user.home_features or []) )
+          - text: Bowling alley
+            default: (@ "Bowling alley" in (user.home_features or []) )
+          - text: Pergola
+            default: (@ "Pergola" in (user.home_features or []) )
+          - text: Walk-in pantry
+            default: (@ "Walk-in pantry" in (user.home_features or []) )
+        multi: true
     submit:
       text: Next
   - user_set:
-      name: (@ flow.result[0] )
-      email: (@ flow.result[1] )
-      canadian: (@ flow.result[2] )
+      home_type: (@ flow.result[0] )
+      home_value: (@ flow.result[1] )
+      home_year: (@ flow.result[2] )
+      home_features: (@ flow.result[3] )
+  - flow: flow.onboarding.finances
+    transfer: true
