--- a/flow/onboarding/review.yaml
+++ b/flow/onboarding/review.yaml
@@ -13,7 +13,22 @@ steps:
         - text: Review
           current: true
     page:
-      - info: Review
+      - info: |
+          # Let's review
+
+          One more step, and this (@ user.house_year) home mortgage is yours. Please verify all details before continuing.
+
+          | Name          | Email           |
+          | ------------- | --------------- |
+          | (@ user.name) | (@ user.email ) |
+
+          | Mortgage             | Interest rate                         | Payment                                  |
+          | -------------------- | ------------------------------------- | ---------------------------------------- |
+          | (@ user.option.name) | (@ "%.2f"|format(user.option.rate) )% | $(@ "%.2f"|format(user.option.payment) ) |
+      - checkbox: I agree to all terms and conditions
+        required: true
+      - checkbox: I am ready to start my new mortgage
+        required: true
     submit:
       text: Sign ✍️
   - flow: flow.onboarding.done
