Add orb mobile 🔧

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,5 @@
+color:
+  brand: "#a655e4"
 icon:
   menu: streamline-regular/01-interface-essential/03-menu/navigation-menu.svg
   left: streamline-regular/52-arrows-diagrams/01-arrows/arrow-left-1.svg
